fix spacing and size

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,10 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=SUSE:wght@100..800&display=swap");
 
-$cor--principal: #000;
+$cor--principal: #212121;
 $cor--secundaria: #f6f6f6;
 $cor--terciaria: #22d4fd;
-$cor--hover: #272727;
+$cor--hover: #2a2a2a;
 
 // *{
 //     margin: 0;
