--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -6,6 +6,7 @@ footer {
   width: 100%;
   left: 0;
   bottom: 0;
+  border-top: 1px solid $cor--terciaria;
 }
 
 .copyright {
