--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,14 +9,14 @@ html {
 }
 
 body {
-  //background-color: #111;
-  background-image: url("assets/images/wallpaper.jpg");
-  min-height: 500px;
+  background-color: $cor--principal;
+  // background-image: url("assets/images/wallpaper.jpg");
+  // min-height: 500px;
 
-  background-attachment: fixed;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  // background-attachment: fixed;
+  // background-position: center center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
 }
 
 body::-webkit-scrollbar {
